# AugmentedLabelRegistration

./: CMakeLists.txt
AugmentedLabelRegistration/: AugmentedLabelRegistration.py  CMakeLists.txt
DistanceMapRegistration/: CMakeLists.txt  DistanceMapRegistration.py
LabelMapToModel/: CMakeLists.txt  LabelMapToModel.py
